--- a/muikku/src/main/webapp/resources/theme-muikku/sass/screen.scss
+++ b/muikku/src/main/webapp/resources/theme-muikku/sass/screen.scss
@@ -31,7 +31,10 @@ body {
 
 .hidden {
 	display:none;
+}
 
+.alignRight {
+  text-align:right;
 }
 
 h1,h2,h3,h4,h5 {
